--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -8,19 +8,21 @@
       "build_source_folder": "TerryTestConfigMGR2015",
       "build_output_subfolder": "TerryTestConfigMGR2015",
       "locale": "zh-cn",
-      "version": 0,
       "open_to_public_contributors": true,
       "type_mapping": {
         "Conceptual": "Content",
         "ManagedReference": "Content",
         "RestApi": "Content"
-      }
+      },
+      "version": 0
     }
   ],
   "notification_subscribers": [
     "terryjin@microsoft.com"
   ],
   "branches_to_filter": [],
+  "continue_with_document_error": true,
   "skip_source_output_uploading": false,
-  "dependent_repositories": []
+  "dependent_repositories": [],
+  "need_generate_pdf_url_template": false
 }
